--- a/cn.html
+++ b/cn.html
@@ -695,14 +695,18 @@
           <!-- <li><strong>摄影</strong>: <a href="https://photo.h-xu.com/" target="_blank"
                 target="_blank"><span class='blue'>photo.h-xu.com</span></a> (X-graphy)<br></li> -->
 
-          <br>
+          <!-- <br>
           <a href="https://info.flagcounter.com/D897" target="_blank">
             <div style="width: fit-content; height: calc(100% * 2 / 3); overflow: hidden; display: inline-block;">
               <img
                 src="https://s01.flagcounter.com/count/D897/bg_FFFFFF/txt_404040/border_FFFFFF/columns_8/maxflags_16/viewers_3/labels_0/pageviews_1/flags_0/percent_0/"
                 alt="Flag Counter" style="display: block;">
             </div>
-          </a>
+          </a> -->
+
+          <a href="https://www.flagcounter.me/details/eVE"><img src="https://www.flagcounter.me/eVE/"
+              alt="Flag Counter"></a> <!---   https://www.flagcounter.me/regenerate/eVE  Password:8iExFwT7N  中文  -->
+
 
           <!---<a href="https://www.flagcounter.me/details/enB"><img src="https://www.flagcounter.me/enB/"
               alt="Flag Counter"></a>
@@ -715,7 +719,6 @@
         </ul>
 
       </div>
-
 
 
 
