--- a/ar.html
+++ b/ar.html
@@ -698,16 +698,21 @@
           <li><strong>معرف جوجل الباحث العلمي</strong>: <a
               href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"><span
                 class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
-          <br>
+
+          <a href="https://www.flagcounter.me/details/eVN"><img src="https://www.flagcounter.me/eVN/"
+              alt="Flag Counter"></a>
+          <!-- https://www.flagcounter.me/regenerate/eVN WNUZSB8Wy 阿拉伯语-->
+          <!-- <br>
           <a href="https://info.flagcounter.com/D897" target="_blank">
             <div style="width: fit-content; height: calc(100% * 2 / 3); overflow: hidden; display: inline-block;">
               <img
                 src="https://s01.flagcounter.com/count/D897/bg_FFFFFF/txt_404040/border_FFFFFF/columns_8/maxflags_16/viewers_3/labels_0/pageviews_1/flags_0/percent_0/"
                 alt="Flag Counter" style="display: block;">
             </div>
-          </a>
+          </a> -->
         </ul>
       </div>
+
 
 
     </div><!-- Content -->
