--- a/cn-research.html
+++ b/cn-research.html
@@ -414,7 +414,7 @@
             <p class="hidden-mobile"></p>
             <!--<h3 class="hidden-mobile"><ruby>简<rt><text style="color:rgb(255, 255, 255)">かん</text></rt></ruby> <ruby>介<rt><text style="color:rgb(255, 255, 255)">かい</text> </rt></ruby>-->
             <h3 class="hidden-mobile">
-                <span><ruby>研究进展<rt><text style="color:rgb(255, 255, 255)">Hi，Nǐ Hǎo！</text></rt></ruby> <ruby>
+                <span><ruby>研究进展<rt><text style="color:rgb(255, 255, 255)">Research Progress</text></rt></ruby> <ruby>
                         <rt><text style="color:rgb(255, 255, 255)"></text></rt>
                     </ruby> <small><small><small> 科研 / 行研</small></small></small>
 
@@ -1337,15 +1337,17 @@
                         13500+)<br></li>
                     <!-- <li><strong>摄影</strong>: <a href="https://photo.h-xu.com/" target="_blank" target="_blank"><span
                                 class='blue'>photo.h-xu.com</span></a> (X-graphy)<br></li> -->
-
-                    <br>
+                    <a href="https://www.flagcounter.me/details/eVE"><img src="https://www.flagcounter.me/eVE/"
+                            alt="Flag Counter"></a>
+                    <!---   https://www.flagcounter.me/regenerate/eVE  Password:8iExFwT7N  中文  -->
+                    <!-- <br>
                     <a href="https://info.flagcounter.com/D897" target="_blank">
                         <div
                             style="width: fit-content; height: calc(100% * 2 / 3); overflow: hidden; display: inline-block;">
                             <img src="https://s01.flagcounter.com/count/D897/bg_FFFFFF/txt_404040/border_FFFFFF/columns_8/maxflags_16/viewers_3/labels_0/pageviews_1/flags_0/percent_0/"
                                 alt="Flag Counter" style="display: block;">
                         </div>
-                    </a>
+                    </a> -->
 
                     <!---<a href="https://www.flagcounter.me/details/enB"><img src="https://www.flagcounter.me/enB/"
               alt="Flag Counter"></a>
@@ -1361,6 +1363,9 @@
 
 
         </div><!-- Content -->
+
+
+
         <div>
             <footer class="eleven center-column">
 
