--- a/de-research.html
+++ b/de-research.html
@@ -991,14 +991,20 @@
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>Google-Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li><br>
-          <a href="https://info.flagcounter.com/D897" target="_blank"><img
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+
+          <a href="https://www.flagcounter.me/details/eVG"><img src="https://www.flagcounter.me/eVG/"
+              alt="Flag Counter"></a> <!--  https://www.flagcounter.me/regenerate/eVG HSNFBsABe 德语 -->
+          <!-- <br><a href="https://info.flagcounter.com/D897" target="_blank"><img
               src="https://s01.flagcounter.com/count/D897/bg_FFFFFF/txt_404040/border_FFFFFF/columns_8/maxflags_16/viewers_3/labels_0/pageviews_1/flags_0/percent_0/"
-              border="0"></a>
+              border="0"></a> -->
         </ul>
 
         </ul>
       </div>
+
+
+      <br>
 
     </div><!-- Content -->
 
