--- a/en-resume.html
+++ b/en-resume.html
@@ -740,10 +740,14 @@
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>Google Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
               target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
-          <br>
+
+          <a href="https://www.flagcounter.me/details/eVF"><img src="https://www.flagcounter.me/eVF/"
+              alt="Flag Counter"></a> <!-- https://www.flagcounter.me/regenerate/eVF MFQClYKOU 英语-->
+
+          <!-- <br>
           <a href="https://info.flagcounter.com/D897" target="_blank"><img
               src="https://s01.flagcounter.com/count/D897/bg_FFFFFF/txt_404040/border_FFFFFF/columns_8/maxflags_16/viewers_3/labels_0/pageviews_1/flags_0/percent_0/"
-              border="0"></a>
+              border="0"></a> -->
           <!-- <a href="https://www.flagcounter.me/details/enB"><img src="https://www.flagcounter.me/enB/"
               alt="Flag Counter"></a> -Pass: AHlUufteU -->
         </ul>
@@ -754,7 +758,7 @@
         </ul>
       </div>
 
-
+      <br>
 
 
 
