--- a/cn-research.html
+++ b/cn-research.html
@@ -193,7 +193,7 @@
             <div>
                 <a class='slide' href='cn-research.html#publications'>
                     <span class='element'>Pb&nbsp;&nbsp;</span>
-                    <span class='name'>出版物</span>
+                    <span class='name'>论文</span>
                 </a>
             </div>
             <div>
@@ -475,7 +475,8 @@
                         <li><strong><a href="cn-research.html"><small><span>▸ 研究进展 ⇨</span></small></a></strong></li>
                         <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                             <li style="width: 50%; box-sizing: border-box;"><a
-                                    href="cn-research.html#publications">&nbsp;&nbsp;&nbsp;<small>• 出版物</small></a></li>
+                                    href="cn-research.html#publications">&nbsp;&nbsp;&nbsp;<small>• 学术论文</small></a>
+                            </li>
                             <li style="width: 50%; box-sizing: border-box;"><a
                                     href="cn-research.html#patents">&nbsp;&nbsp;&nbsp;<small>• 专利</small></a></li>
                             <li style="width: 50%; box-sizing: border-box;"><a
