--- a/cn-resume.html
+++ b/cn-resume.html
@@ -217,7 +217,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='cn-contact.html'>
           <span class='element'>C&nbsp;&nbsp;&nbsp;</span>
           <span class='name'>联系</span>
         </a>
@@ -329,7 +329,7 @@
             <li><a href="#awards">&nbsp;• 荣誉奖励</a></li>
             <li><a href="cn-activities.html">兴趣爱好</a></li>
             <p>____</p>
-            <li><a href="#contact"><span class='blue'>联系我</span></a></li>
+            <li><a href="cn-contact.html"><span class='blue'>联系我</span></a></li>
             <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
@@ -454,7 +454,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 运动</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>联系我</strong></small></a><br></li>
+            <li><a href="cn-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>联系我</strong></small></a><br>
+            </li>
             <hr>
           </ul>
         </div>
