--- a/cn.html
+++ b/cn.html
@@ -248,7 +248,7 @@
             <li><a href="cn-research.html">研究进展</a></li>
             <li><a href="cn-resume.html">简历</a></li>
             <li><a href="cn-activities.html">兴趣爱好</a></li>
-            <li><a href="#contact">联系我</a></li>
+            <li><a href="cn-contact.html">联系我</a></li>
             <p>____</p>
             <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
                   class='blue'>领英</span></a></li>
@@ -454,7 +454,8 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 运动</small></a></li>
               </div>
 
-              <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>联系我</strong></small></a><br></li>
+              <li><a href="cn-contact.html"><small style="color: rgb(97, 97, 97);">▸
+                    <strong>联系我</strong></small></a><br></li>
               <hr>
             </div>
           </ul>
