--- a/cn-activities.html
+++ b/cn-activities.html
@@ -217,7 +217,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='cn-contact.html'>
           <span class='element'>C&nbsp;&nbsp;&nbsp;</span>
           <span class='name'>联系</span>
         </a>
@@ -329,7 +329,7 @@
             <li><a href="#sports">&nbsp;• 运动</a></li>
             <li><a href="https://photo.h-xu.com" target="_blank">&nbsp;• 摄影</a></li>
             <p>____</p>
-            <li><a href="#contact"><span class='blue'>联系我</span></a></li>
+            <li><a href="cn-contact.html"><span class='blue'>联系我</span></a></li>
             <p>____</p>
             <!--<li><a href="index.html" target="_self">EN</a> | <a href='javascript:(function(){var s=document.getElementById("tongwenlet_cn");if(s!=null){document.body.removeChild(s);}var s=document.createElement("script");s.language="javascript";s.type="text/javascript";s.src="https://rawgit.com/skofkyo/userChromeJS/master/UserScriptLoader/bookmarklet_cn.js";s.id="tongwenlet_cn";document.body.appendChild(s);})();' class="d-inline-block p-3">简</a> /  <a href='javascript:(function(){var s=document.getElementById("tongwenlet_tw");if(s!=null){document.body.removeChild(s);}var s=document.createElement("script");s.language="javascript";s.type="text/javascript";s.src="https://rawgit.com/skofkyo/userChromeJS/master/UserScriptLoader/bookmarklet_tw.js";s.id="tongwenlet_tw";document.body.appendChild(s);})();' class="d-inline-block p-3">繁</a> </br><a href="de.html" target="_self">DE</a> | <a href="fr.html" target="_self">FR</a> </li> -->
             <p></p>
@@ -456,7 +456,8 @@
                   href="cn-activities.html#sports">&nbsp;&nbsp;&nbsp;<small>• 运动</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>联系我</strong></small></a><br></li>
+            <li><a href="cn-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>联系我</strong></small></a><br>
+            </li>
             <hr>
           </ul>
         </div>
