--- a/cn-contact.html
+++ b/cn-contact.html
@@ -538,7 +538,8 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 运动</small></a></li>
               </div>
 
-              <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>联系我</strong></small></a><br></li>
+              <li><a href="cn-contact.html"><small style="color: rgb(97, 97, 97);">▸
+                    <strong>联系我</strong></small></a><br></li>
               <hr>
             </div>
           </ul>
@@ -605,7 +606,7 @@
         <ul class="square">
 
           <li><strong>邮箱</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu
-                [at] tum.de</span></a> (Offical)</li>
+                [at] tum.de</span></a> (请将 [at] 替换为 @ )</li>
           <!-- <li><strong>线上会议</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1vs1会议, 请提前预约)</li> -->
           <li><strong>领英</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
