--- a/cn-research.html
+++ b/cn-research.html
@@ -203,7 +203,7 @@
                 </a>
             </div>
             <div>
-                <a class='slide' href='#contact'>
+                <a class='slide' href='cn-contact.html'>
                     <span class='element'>C&nbsp;&nbsp;&nbsp;</span>
                     <span class='name'>联系</span>
                 </a>
@@ -316,7 +316,7 @@
                         <li><a href="cn-resume.html">简历</a></li>
                         <li><a href="cn-activities.html">兴趣爱好</a></li>
                         <p>____</p>
-                        <li><a href="#contact"><span class='blue'>联系我</span></a></li>
+                        <li><a href="cn-contact.html"><span class='blue'>联系我</span></a></li>
                         <p>____</p>
                         <p></p>
                         <img src="images/logo.png" width="45" />
@@ -518,7 +518,7 @@
                                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 运动</small></a></li>
                         </div>
 
-                        <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸
+                        <li><a href="cn-contact.html"><small style="color: rgb(97, 97, 97);">▸
                                     <strong>联系我</strong></small></a><br></li>
                         <hr>
                     </ul>
