--- a/cn-contact.html
+++ b/cn-contact.html
@@ -624,12 +624,12 @@
         <hr class="hidden-mobile">
 
         <iframe class="hidden-mobile" width="700px" height="2580px"
-          src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAYAAMAoNQBUMVBTNUhDVkNJTUlFWVRIRTBBSkVRSUk0SS4u&embed=true"
+          src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAYAAMAoNQBUMVBTNUhDVkNJTUlFWVRIRTBBSkVRSUk0SS4u&embed=true&lang=zh-CN"
           frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:177vh"
           allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
 
         <iframe class="display-mobile" style="width:113%" width="900px" height="1650px"
-          src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAYAAMAoNQBUMVBTNUhDVkNJTUlFWVRIRTBBSkVRSUk0SS4u&embed=true"
+          src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAYAAMAoNQBUMVBTNUhDVkNJTUlFWVRIRTBBSkVRSUk0SS4u&embed=true&lang=zh-CN"
           frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:260vh"
           allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
 
