--- a/de-research.html
+++ b/de-research.html
@@ -229,7 +229,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='de-contact.html'>
           <span class='element'>K</span>
           <span class='name'>Kontakt</span>
         </a>
@@ -298,7 +298,7 @@
             <li><a href="de-resume.html">Lebenslauf</a></li>
             <li><a href="de-activities.html">Aktivitäten</a></li>
             <p>____</p>
-            <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Kontakt</span></a></li>
+            <li><a href="de-contact.html"><span style="color: rgb(253, 93, 7);">Kontakt</span></a></li>
             <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
@@ -400,7 +400,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sportarten</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Kontakt</strong></small></a><br>
+            <li><a href="de-contact.html"><small style="color: rgb(97, 97, 97);">▸
+                  <strong>Kontakt</strong></small></a><br>
             </li>
             <hr>
           </ul>
