--- a/de.html
+++ b/de.html
@@ -229,7 +229,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='de-contact.html'>
           <span class='element'>K</span>
           <span class='name'>Kontakt</span>
         </a>
@@ -293,7 +293,7 @@
             <li><a href="de-research.html">Forschung</a></li>
             <li><a href="de-resume.html">Lebenslauf</a></li>
             <li><a href="de-activities.html">Aktivitäten</a></li>
-            <li><a href="#contact">Kontakt</a></li>
+            <li><a href="de-contact.html">Kontakt</a></li>
             <p>____</p>
             <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
                   class='blue'>LinkedIn</span></a></li>
@@ -468,7 +468,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sportarten</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Kontakt</strong></small></a><br>
+            <li><a href="de-contact.html"><small style="color: rgb(97, 97, 97);">▸
+                  <strong>Kontakt</strong></small></a><br>
             </li>
             <hr>
           </ul>
