--- a/en-activities.html
+++ b/en-activities.html
@@ -248,7 +248,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='en-contact.html'>
           <span class='element'>C</span>
           <span class='name'>Contact</span>
         </a>
@@ -319,7 +319,7 @@
             <li><a href="#gallery">&nbsp;• Gallery</a></li>
             <li><a href="#sports">&nbsp;• Sports</a></li>
             <p>____</p>
-            <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
+            <li><a href="en-contact.html"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
             <p>____</p>
 
             <p></p>
@@ -426,7 +426,7 @@
                     href="en-activities.html#sports">&nbsp;&nbsp;&nbsp;<small>• Sports</small></a></li>
               </div>
 
-              <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Contact
+              <li><a href="en-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Contact
                       Me</strong></small></a><br></li>
               <hr>
             </div>
