--- a/en.html
+++ b/en.html
@@ -203,7 +203,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='en-contact.html'>
           <span class='element'>C</span>
           <span class='name'>Contact</span>
         </a>
@@ -266,7 +266,7 @@
             <li><a href="en-research.html">Research</a></li>
             <li><a href="en-resume.html">CV</a></li>
             <li><a href="en-activities.html">Activities</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="en-contact.html">Contact</a></li>
             <p>____</p>
             <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
                   class='blue'>LinkedIn</span></a></li>
@@ -442,7 +442,7 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sports</small></a></li>
               </div>
 
-              <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Contact
+              <li><a href="en-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Contact
                       Me</strong></small></a><br></li>
               <hr>
             </div>
@@ -674,6 +674,9 @@
       <div class="doc-section" id="contact">
         <h3>Contact</h3>
         <ul class="square">
+          <li><strong>Message Board</strong>: <a href="https://scholar.h-xu.com/en-contact.html" target="_blank"
+              target="_blank"><span class='blue'>scholar.h-xu.com/en-contact</span></a> (Please kindly drop me the
+            message)<br /></li>
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
                 class='blue'>h.xu [at] tum.de</span></a> (Please feel free to contact me in case of any
             collaborations or requests :-)<br /></li>
