--- a/en-research.html
+++ b/en-research.html
@@ -201,7 +201,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='en-contact.html'>
           <span class='element'>C</span>
           <span class='name'>Contact</span>
         </a>
@@ -270,7 +270,7 @@
             <li><a href="en-resume.html">CV</a></li>
             <li><a href="en-activities.html">Activities</a></li>
             <p>____</p>
-            <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
+            <li><a href="en-contact.html"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
             <p>____</p>
 
             <p></p>
@@ -377,7 +377,7 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sports</small></a></li>
               </div>
 
-              <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Contact
+              <li><a href="en-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Contact
                       Me</strong></small></a><br></li>
               <hr>
             </div>
