--- a/de-contact.html
+++ b/de-contact.html
@@ -511,12 +511,12 @@
           Ich freue mich darauf, mit Ihnen in Kontakt zu treten!
 
         <ul class="square">
-
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
                 class='blue'>h.xu
                 [at] tum.de</span></a> (bitte [at] durch @ ersetzen )</li>
-          <!-- <li><strong>Online Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank" target="_blank"><span
-              class='blue'>calendly.com/heliosxu/45min</span></a> (1-on-1 meeting, please book appointment in advance)</li> -->
+          <li><strong>Online-Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"
+              target="_blank"><span class='blue'>calendly.com/heliosxu/45min</span></a> (1-zu-1-Meeting, bitte im Voraus
+            buchen)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Follower: 1800+)<br></li>
           <li><strong>Google-Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
