--- a/de-research.html
+++ b/de-research.html
@@ -981,6 +981,9 @@
       <div class="doc-section" id="contact">
         <h3>Kontakt</h3>
         <ul class="square">
+          <li><strong>Nachrichtenbrett</strong>: <a href="de-contact.html"><span
+                class='blue'>scholar.h-xu.com/de-contact</span></a> (Bitte schreiben Sie mir eine
+            Nachricht)<br /></li>
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
                 class='blue'>h.xu [at] tum.de</span></a> (Für Zusammenarbeit, Beratung oder Interviews,
             kontaktieren
