--- a/en-contact.html
+++ b/en-contact.html
@@ -491,15 +491,15 @@
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
                 class='blue'>h.xu
                 [at] tum.de</span></a> (please replace [at] with @ )</li>
-          <!-- <li><strong>Online Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank" target="_blank"><span
-              class='blue'>calendly.com/heliosxu/45min</span></a> (1-on-1 meeting, please book appointment in advance)</li> -->
+          <!-- <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
+                  class='blue'>h.xu [at] tum.de</span></a> (Please feel free to contact me in case of any
+              collaborations or requests :-)<br /></li> -->
+          <li><strong>Online Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (1-on-1 meeting, please book in advance)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Followers: 1800+)<br></li>
-          <li><strong>Google Scholar</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Citations: <span
-              id="citation-count">300+</span>)<br></li>
-          <!-- <li><strong>Zhihu</strong>: <a href="https://www.zhihu.com/people/dr.of.nothing" target="_blank"
-            target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (Followers: 13700+)<br></li> -->
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+          <li><strong>Google Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
 
         </ul>
         </p>
