--- a/en-resume.html
+++ b/en-resume.html
@@ -731,9 +731,12 @@
       <div class="doc-section" id="contact">
         <h3>Contact Me</h3>
         <ul class="square">
-          <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a> (Please feel free to contact me in case of any
-            collaborations or requests :-)<br /></li>
+          <li><strong>Message Board</strong>: <a href="en-contact.html"><span
+                class='blue'>scholar.h-xu.com/en-contact</span></a> (Please kindly drop me the
+            message)<br /></li>
+          <!-- <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
+            class='blue'>h.xu [at] tum.de</span></a> (Please feel free to contact me in case of any
+        collaborations or requests :-)<br /></li> -->
           <li><strong>Online Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1-on-1 meeting, please book in advance)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
