--- a/jp-research.html
+++ b/jp-research.html
@@ -227,7 +227,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='jp-contact.html'>
           <span class='element'>C&nbsp;&nbsp;&nbsp;</span>
           <span class='name'>連絡</span>
         </a>
@@ -300,7 +300,7 @@
             <li><a href="jp-resume.html">履歴</a></li>
             <li><a href="jp-activities.html">趣味</a></li>
             <p>____</p>
-            <li><a href="#contact"><span class='blue'>連絡先</span></a></li>
+            <li><a href="jp-contact.html"><span class='blue'>連絡先</span></a></li>
             <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
@@ -406,7 +406,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• スポーツ</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>私に連絡して</strong></small></a><br></li>
+            <li><a href="jp-contact.html"><small style="color: rgb(97, 97, 97);">▸
+                  <strong>私に連絡して</strong></small></a><br></li>
             <hr>
           </ul>
         </div>
@@ -1104,6 +1105,9 @@
       <div class="doc-section" id="contact">
         <h3>私に連絡して</h3>
         <ul class="square">
+          <li><strong>メッセージボード</strong>: <a href="jp-contact.html"><span
+                class='blue'>scholar.h-xu.com/jp-contact</span></a>（ご連絡をお待ちしております）<br /></li>
+
           <li><strong>メール</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu
                 [at] tum.de</span></a> (協力、相談、またはメディアインタビューはご連絡ください!)<br /></li>
           <li><strong>オンライン会議</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
