--- a/fr.html
+++ b/fr.html
@@ -242,7 +242,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='fr-contact.html'>
           <span class='element'>C</span>
           <span class='name'>Contact</span>
         </a>
@@ -306,7 +306,7 @@
             <li><a href="fr-research.html">Recherche</a></li>
             <li><a href="fr-resume.html">CV</a></li>
             <li><a href="fr-activities.html">Activités</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="fr-contact.html">Contact</a></li>
             <p>____</p>
             <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
                   class='blue'>LinkedIn</span></a></li>
@@ -478,7 +478,7 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Des sports</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸
+            <li><a href="fr-contact.html"><small style="color: rgb(97, 97, 97);">▸
                   <strong>Contactez-moi</strong></small></a><br></li>
             <hr>
           </ul>
@@ -602,9 +602,12 @@
       <div class="doc-section" id="contact">
         <h3>Contactez-moi</h3>
         <ul class="square">
-          <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
+          <li><strong>Tableau de bord</strong> : <a href="fr-contact.html"><span
+                class='blue'>scholar.h-xu.com/fr-contact</span></a> (Veuillez m'envoyer le
+            message)<br /></li>
+          <!-- <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
                 class='blue'>h.xu [at] tum.de</span></a> (N'hésitez pas à me contacter pour toute collaboration ou
-            demande!)<br /></li>
+            demande!)<br /></li> -->
           <li><strong>Réunion en ligne</strong> : <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (réunion en tête-à-tête, veuillez réserver à
             l'avance)</li>
