--- a/jp.html
+++ b/jp.html
@@ -671,8 +671,8 @@
         <ul class="square">
           <li><strong>メッセージボード</strong>: <a href="jp-contact.html"><span
                 class='blue'>scholar.h-xu.com/jp-contact</span></a>（ご連絡をお待ちしております）<br /></li>
-          <li><strong>メール</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu
-                [at] tum.de</span></a> (協力、相談、またはメディアインタビューはご連絡ください!)<br /></li>
+          <!-- <li><strong>メール</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu
+                [at] tum.de</span></a> (協力、相談、またはメディアインタビューはご連絡ください!)<br /></li> -->
           <li><strong>オンライン会議</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1対1の会議、事前に予約してください)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
