--- a/es.html
+++ b/es.html
@@ -230,7 +230,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='es-contact.html'>
           <span class='element'>C</span>
           <span class='name'>Contact</span>
         </a>
@@ -294,7 +294,7 @@
             <li><a href="es-research.html">Investigación</a></li>
             <li><a href="es-resume.html">CV</a></li>
             <li><a href="es-activities.html">Actividades</a></li>
-            <li><a href="#contact">Contacto</a></li>
+            <li><a href="es-contact.html">Contacto</a></li>
             <p>____</p>
             <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
                   class='blue'>LinkedIn</span></a></li>
@@ -466,7 +466,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Deportes</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Contacto</strong></small></a><br>
+            <li><a href="es-contact.html"><small style="color: rgb(97, 97, 97);">▸
+                  <strong>Contacto</strong></small></a><br>
             </li>
             <hr>
           </ul>
@@ -591,6 +592,8 @@
       <div class="doc-section" id="contact">
         <h3>Contacto</h3>
         <ul class="square">
+          <li><strong>Tablón de Mensajes</strong>: <a href="es-contact.html"><span
+                class='blue'>scholar.h-xu.com/es-contact</span></a> (Por favor, envíeme un mensaje)<br /></li>
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
                 class='blue'>h.xu [at] tum.de</span></a> (Siéntase libre de contactarme en caso de cualquier
             colaboración o solicitud!)<br /></li>
