--- a/fr-research.html
+++ b/fr-research.html
@@ -242,7 +242,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='fr-contact.html'>
           <span class='element'>C</span>
           <span class='name'>Contact</span>
         </a>
@@ -311,7 +311,7 @@
             <li><a href="fr-resume.html">CV</a></li>
             <li><a href="fr-activities.html">Activités</a></li>
             <p>____</p>
-            <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
+            <li><a href="fr-contact.html"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
             <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
@@ -414,7 +414,7 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Des sports</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸
+            <li><a href="fr-contact.html"><small style="color: rgb(97, 97, 97);">▸
                   <strong>Contactez-moi</strong></small></a><br></li>
             <hr>
           </ul>
@@ -1007,6 +1007,9 @@
       <div class="doc-section" id="contact">
         <h3>Contactez-moi</h3>
         <ul class="square">
+          <li><strong>Tableau de bord</strong> : <a href="fr-contact.html"><span
+                class='blue'>scholar.h-xu.com/fr-contact</span></a> (Veuillez m'envoyer le
+            message)<br /></li>
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
                 class='blue'>h.xu [at] tum.de</span></a> (N'hésitez pas à me contacter pour toute collaboration ou
             demande!)<br /></li>
